--- a/CSS/style.css
+++ b/CSS/style.css
@@ -132,7 +132,7 @@ label {
     display: flex;
     font-size: 1.4vw;
     color: white;
-    background: url(Images/cross.svg) no-repeat;
+    background: url(../Images/cross.svg);
     background-size: 2.6vw;
     background-position-x: center;
     background-position-y: center;
@@ -174,7 +174,7 @@ label {
 }
 
 .item-checkbox:checked {
-    background: url(Images/check.svg) no-repeat;
+    background: url(../Images/check.svg) no-repeat;
     width: 2.6vw;
     background-size: 2.6vw;
     height: 2.6vw;
